Adjust file names, add data for API docs
